# luminAI

./: Cargo.toml  README.md  pubspec.yaml  setup_code_signing.bat  start.cmd
.github/workflows/: build-release.yml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: browser_screen.dart  database_helper.dart  main.dart
lib/models/: download_info.dart  smart_note.dart  tab_folder.dart  tab_info.dart  widget_data.dart
lib/services/: adblock_service.dart  ai_recommendation_service.dart  ai_service.dart  bookmark_manager.dart  browser_automation_service.dart  browser_controller.dart  chat_manager.dart  contextual_highlights_manager.dart  download_manager.dart  function_calling_service.dart  history_manager.dart  hover_preview_manager.dart  link_preview_handler.dart  navigation_manager.dart  notification_service.dart  ollama_service.dart  openrouter_service.dart  screenshot_manager.dart  settings_manager.dart  stripe_dart_sdk.dart  tab_manager.dart  update_service.dart  web_analytics_interop.dart  web_preview_service.dart  web_scraping_service.dart  web_view_javascript_manager.dart
lib/widgets/: address_bar_suggestions.dart  bookmark_bottom_sheet.dart  bookmark_window.dart  browser_app_bar.dart  chat_sidebar.dart  compact_tab_bar.dart  context_tree_selection_dialog.dart  download_window.dart  draggable_widget.dart  history_window.dart  hover_preview_widget.dart  new_tab_page.dart  rss_feed_widget.dart  (+10 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+16 files in other folders)
